crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__enums__enum_1.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/enums.rs
assertion_line: 6
expression: "goto_definition(r#\"\n%! main.sp\nenum Foo {\n      |\n      ^\n}\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 5
      },
      "end": {
        "line": 0,
        "character": 8
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 1,
        "character": 1
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 5
      },
      "end": {
        "line": 0,
        "character": 8
      }
    }
  }
]
