crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__enums__enum_3.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/enums.rs
assertion_line: 33
expression: "goto_definition(r#\"\n%! main.sp\nenum Foo {\n    Bar,\n    Baz\n}\n\nFoo foo() {\n    return Bar;\n           |\n           ^\n};\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 6,
        "character": 11
      },
      "end": {
        "line": 6,
        "character": 14
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 7
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 7
      }
    }
  }
]
